deployment/k8s/whoami/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: whoami
  labels:
    app: whoami
  namespace: testing-flutter

spec:
  replicas: 1
  selector:
    matchLabels:
      app: whoami
  template:
    metadata:
      labels:
        app: whoami
    spec:
      containers:
        - name: whoami
          image: traefik/whoami
          ports:
            - name: web
              containerPort: 80
          resources:
            limits:
              memory: 128Mi
              cpu: "0.3"
            requests:
              memory: 56Mi
              cpu: "0.1"
