deployment/k8s/whoami/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: whoami
  namespace: testing-flutter

spec:
  ports:
    - name: web
      port: 80
      targetPort: web

  selector:
    app: whoami
